<resources>
    <string name="google_maps_key">AIzaSyBxDmmCPJoYV5kYHHkoQKE-BtbDeK4WGwA</string>

    <string name="app_name">Погода</string>
    <string name="label">Погода</string>
    <string name="text">Погода</string>
    <string name="city_and_region">Белгород, Белгородская область</string>
    <string name="data_and_time">воскресенье 10:00</string>
    <string name="weather">Солнечно</string>
    <string name="temperature">15</string>
    <string name="degrees">C | F</string>
    <string name="probability_of_precipitation">Вероятность осадков: %1$d %%</string>
    <string name="probability_of_precipitation1">Вероятность осадков: 0%</string>
    <string name="humidity">Влажность:  %1$d %%</string>
    <string name="wind">Ветер: %1$s %2$.2f м/с</string>
    <string name="city_request">Введите название города</string>
    <string name="check_weather">Узнать погоду</string>
    <string name="empty">Список городов пуст</string>
    <string name="check_temperature">Проверить температуру</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_info">О приложении</string>
    <string name="menu_exit">Выход</string>
    <string name="name">Наталья Кулабухова</string>
    <string name="email">nataliani80@gmail.com</string>
    <string name="cities">Города</string>
    <string name="map">Карта</string>
    <string name="about_developer">О разработчике</string>
    <string name="feedback">Форма обратной связи</string>
    <string name="feel_like">Ощущается как %1$d °C</string>
    <string name="add_city">Добавить город</string>
    <string name="add">Добавить</string>
    <string name="menu">Меню</string>

    <string name="share">Поделиться</string>
    <string name="menu_title">Связь</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>


    <string-array name="Cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Белгород</item>
        <item>Екатеринбург</item>
        <item>Новосибирск</item>
        <item>Барнаул</item>
        <item>Воронеж</item>
        <item>Кострома</item>
        <item>Волгоград</item>
        <item>Самара</item>
        <item>Мурманск</item>
        <item>Новороссийск</item>
        <item>Ростов-На-Дону</item>
        <item>Великий Устюг</item>
        <item>Калевала</item>
        <item>Сочи</item>
    </string-array>

    <string-array name="Weather">
        <item>Пасмурно</item>
        <item>Дождь со снегом</item>
        <item>Солнечно</item>
        <item>Переменная облачность</item>
        <item>Ожидаются заморозки</item>
        <item>Солнечно</item>
        <item>Пасмурно</item>
        <item>Дождь со снегом</item>
        <item>Солнечно</item>
        <item>Переменная облачность</item>
        <item>Ожидаются заморозки</item>
        <item>Солнечно</item>
        <item>Пасмурно</item>
        <item>Дождь со снегом</item>
        <item>Солнечно</item>
        <item>Переменная облачность</item>
    </string-array>

    <string-array name="Temperatures">
        <item>15</item>
        <item>10</item>
        <item>19</item>
        <item>15</item>
        <item>2</item>
        <item>17</item>
        <item>15</item>
        <item>10</item>
        <item>19</item>
        <item>15</item>
        <item>2</item>
        <item>17</item>
        <item>15</item>
        <item>10</item>
        <item>19</item>
        <item>15</item>
    </string-array>

    <string-array name="Days">
        <item>Вчера:</item>
        <item>Позавчера:</item>
        <item>3 дня назад:</item>
        <item>4 дня назад:</item>
        <item>5 дней назад:</item>
        <item>6 дней назад:</item>
        <item>Неделю назад:</item>
    </string-array>

    <string-array name="TemperaturesByDays">
        <item>+20</item>
        <item>+19</item>
        <item>+19</item>
        <item>+15</item>
        <item>+17</item>
        <item>+15</item>
        <item>+13</item>
        <item>+7</item>
    </string-array>


</resources>
