<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cities"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/cities"/>

        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/map"/>
    </group>

    <item android:title="@string/menu_title">
        <menu>
            <item
                android:id="@+id/about_developer"
                android:icon="@drawable/ic_mood_black_24dp"
                android:title="@string/about_developer"/>

            <item
                android:id="@+id/feedback"
                android:icon="@drawable/ic_drafts_black_24dp"
                android:title="@string/feedback"/>

            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share"/>
        </menu>
    </item>
</menu>